--- a/client/src/styles/top-bar.scss
+++ b/client/src/styles/top-bar.scss
@@ -1,4 +1,4 @@
-@import 'mixins.scss';
+@import 'mixins';
 
 body {
 	margin-top: 39px !important;
@@ -68,7 +68,7 @@ body {
 		text-align: center;
 		margin-top: 0;
 		margin-bottom: 0;
-		font-family: Arial, Helvetica, sans-serif;
+		font-family: "Arial", "Helvetica", sans-serif;
 		font-size: 13px;
 		line-height: 16px;
 		color: rgb(51, 51, 51);
